# pith

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CRANELIFT_MILESTONE.md  CRANELIFT_PLAN.md  CRANELIFT_STATUS.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  build.zig  build.zig.zon  test_compare.fg  test_concat.fg  test_consecutive.fg  test_doc_full.fg  test_doc_pattern.fg  test_doc_scan.fg  test_if.fg  test_nested_while.fg  test_sequential_whiles.fg  test_simple.fg  test_simple_str.fg  test_strings.fg  test_substring_method.fg
bench/: README.md  bench.go  catalog_bench.go  catalog_server.fg  catalog_server.go  catalog_server.pith  catalog_workload.fg  catalog_workload.go  catalog_workload.pith  catalog_workload.rs  catalog_workload_bench.go  server.fg  server.go  server.pith  std_pipeline.fg  std_pipeline.go  std_pipeline.pith  std_pipeline_bench.go
bootstrap/: ast.zig  build_support.zig  checker.zig  checker_test.zig  codegen.zig  codegen_test.zig  errors.zig  forge_runtime.h  formatter.zig  intern.zig  io.zig  lexer.zig  lint.zig  main.zig  parser.zig  pipeline.zig  printer.zig  types.zig
cranelift/: Cargo.toml  test_cranelift.fg  test_cranelift.pith  test_generic.fg  test_generic_list.fg  test_import.fg  test_import_self.pith  test_match.pith  test_match_debug.fg  test_match_simple.fg  test_match_trace.fg  test_pair_struct.pith  test_print.pith  test_result.pith  test_result_direct.fg  test_simple_result.pith  test_struct_fields.fg  test_try_operator.pith  test_tuple_manual.pith
cranelift/cli/: Cargo.toml
cranelift/cli/src/: main.rs
cranelift/codegen/: Cargo.toml  build.rs
cranelift/codegen/src/: ast.rs  compiler.rs  ir_consumer.rs  lib.rs  linker.rs  monomorphize.rs  parser.rs  runtime_abi.rs
cranelift/runtime/: Cargo.toml
cranelift/runtime-abi/: list_layout.json  runtime_functions.txt
cranelift/runtime-zig/: build.zig
cranelift/runtime-zig/src/: lib.zig
cranelift/runtime/src/: arc.rs  bytes.rs  compress.rs  crypto.rs  encoding.rs  ffi_util.rs  handle_registry.rs  host_fs.rs  json.rs  lib.rs  network.rs  perf.rs  platform.rs  process.rs  process_io.rs  runtime_core.rs  string.rs  string_list.rs  tls.rs  toml.rs  utility.rs
cranelift/runtime/src/collections/: list.rs  map.rs  mod.rs  set.rs
cranelift/runtime/src/concurrency/: channel.rs  mod.rs  mutex.rs  semaphore.rs  task.rs  waitgroup.rs
docs/: STYLE.md  architecture.md  concurrency.md  contributing.md  errors.md  grammar.ebnf  http_apps.md  idiomatic_forge.md  idiomatic_pith.md  io_foundation.md  logging.md  native_backend_roadmap.md  performance.md  pith_rename_plan.md  slides.md  text_and_bytes.md  tls.md  tooling_stdlib.md  zig_runtime_experiment.md
examples/: README.md  arc_closure_stress  arc_closure_stress.fg  arc_collection_stress  arc_collection_stress.fg  arc_collection_stress.pith  arc_cycle_test  arc_cycle_test.fg  arc_cycle_test.pith  arc_scope_test  arc_scope_test.fg  arc_string_stress  arc_string_stress.fg  arc_string_stress.pith  async_demo.fg  bitwise.fg  bitwise.pith  bytes_io.fg  bytes_io.pith  calculator  calculator.fg  channels.pith  chat_simple.fg  collection_methods.fg  collection_methods.pith  collection_utils.fg  collection_utils.pith  collections.fg  collections.pith  concurrency.fg  concurrency.pith  control_flow.fg  crypto_ops.fg  crypto_ops.pith  csv_ops.fg  csv_ops.pith  data_pipeline  data_pipeline.fg  diagnostic_ops.pith  encoding.fg  (+169 more)
runtime/: forge_runtime.h
self-host/: annotated_list_binding_probe.pith  args_builtin_probe.fg  args_builtin_probe.pith  args_index_type_probe.fg  args_index_type_probe.pith  ast.fg  ast.pith  check_hello_local_probe.fg  check_hello_local_probe.pith  check_hello_probe.fg  check_hello_probe.pith  check_main.fg  check_main.pith  checker.fg  checker.pith  checker_builtin_probe.fg  checker_builtin_probe.pith  checker_builtins.pith  checker_diagnostics.pith  checker_interfaces.pith  checker_methods.pith  checker_modules.pith  checker_scope_input.fg  checker_scope_input.pith  checker_scope_probe.fg  checker_scope_probe.pith  checker_struct_reg_probe.fg  checker_struct_reg_probe.pith  checker_type_intern.pith  codegen.fg  docgen.fg  (+191 more)
(+462 files in other folders)
