[workspace]
members = ["cranelift/runtime", "cranelift/codegen", "cranelift/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kacy Fortner <kacy@kacyfortner.com>"]
license = "MIT"
repository = "https://github.com/kacy/forge"

[workspace.dependencies]
cranelift = "0.110"
cranelift-codegen = "0.110"
cranelift-module = "0.110"
cranelift-object = "0.110"
cranelift-native = "0.110"
target-lexicon = "0.12"
hashbrown = "0.14"
parking_lot = "0.12"
threadpool = "1.8"
libc = "0.2"

# Optimize for performance in release
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
