[workspace]
resolver = "2"
members = ["runtime", "codegen"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Forge Team"]
license = "MIT"

[workspace.dependencies]
cranelift = "0.116.0"
cranelift-codegen = "0.116.0"
cranelift-module = "0.116.0"
cranelift-object = "0.116.0"
cranelift-native = "0.116.0"
target-lexicon = "0.13.0"
hashbrown = "0.15.0"
parking_lot = "0.12.0"
threadpool = "1.8.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0