[package]
name = "pith-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cranelift = { workspace = true }
cranelift-codegen = { workspace = true }
cranelift-module = { workspace = true }
cranelift-object = { workspace = true }
cranelift-native = { workspace = true }
target-lexicon = { workspace = true }
pith-runtime = { path = "../runtime" }

[lib]
name = "pith_codegen"
crate-type = ["rlib"]
