[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = { workspace = true }
parking_lot = { workspace = true }
threadpool = { workspace = true }
libc = { workspace = true }
ring = "0.17.14"
rustls = { version = "0.23.38", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2.0"

[lib]
name = "forge_runtime"
crate-type = ["staticlib", "rlib"]
